--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "stat-type",
-  "version": "1.0.0",
+  "version": "1.1.0"
+,
   "description": "Check if a path is a file, directory or other. Lightweight Node.js fs utility.",
   "main": "index.js",
   "type": "commonjs",
